feat: add new instance types and memory options for scalability

--- a/compose/omnistrate.pro.yaml
+++ b/compose/omnistrate.pro.yaml
@@ -339,7 +339,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -349,9 +355,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
         parameterDependencyMap:
           node-s: nodeInstanceType
       - key: enableTLS
@@ -531,7 +539,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -541,9 +555,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
       - key: enableTLS
         description: Whether to enable TLS for the database
         name: Enable TLS
@@ -822,7 +838,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -832,9 +854,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
         parameterDependencyMap:
           node-sz: nodeInstanceType
 
@@ -1027,7 +1051,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -1037,9 +1067,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
       - key: numReplicas
         description: Number of Replicas
         name: Number of Replicas
@@ -1585,7 +1617,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -1595,9 +1633,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
         parameterDependencyMap:
           node-mz: nodeInstanceType
 
@@ -1790,7 +1830,13 @@ services:
         options:
           - "e2-medium"
           - "e2-standard-2"
+          - "e2-highmem-2"
           - "e2-standard-4"
+          - "e2-highmem-4"
+          - "e2-standard-8"
+          - "e2-highmem-8"
+          - "n4-standard-16"
+          - "n4-highmem-16"
           - "e2-custom-4-8192"
           - "e2-custom-8-16384"
           - "e2-custom-16-32768"
@@ -1800,9 +1846,11 @@ services:
           - "m6i.xlarge"
           - "m6i.2xlarge"
           - "m6i.4xlarge"
+          - "m6i.8xlarge"
           - "r6i.large"
           - "r6i.xlarge"
           - "r6i.2xlarge"
+          - "r6i.4xlarge"
       - key: numReplicas
         description: Number of Replicas
         name: Number of Replicas
